main.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,600;1,300&family=ZCOOL+XiaoWei&display&family=Marcellus&display=swap');

*{
  box-sizing: border-box;
  background: #f3f2ed;

}
main{
  max-width: 80em;
  min-width: 30em;
  margin: 0 auto;
  height: 100%;
  margin-top: 0rem;
  background: #f3f2ed;
}

body{
  margin:0;
  background: #f3f2ed;


}

nav{
  height: 60px;
  position: fixed;
  width: 100%;
}

nav img{
  position: absolute;
  top:-10px;
  left: 50px;
  width: 150px;
  /* height: 50px; 
  margin-top: 5px;
  margin-left: 15px; */
}

nav ul{
  float: right;
  margin-right: 50px;
  margin-top: 23px;
  list-style: none;

}

nav ul li{
  display: inline-block;
  line-height: 0px;
  margin: 0px 5px;
}

nav ul li a.link{
  font-family: 'Hind', sans-serif;
  position: relative;
  padding: 20px 30px;
  color: #2E5090;
  font-size: 18px;
  text-decoration: none;
  display: inline-block;
}

.home-item a{
  text-decoration: none;
}
label #sign-one,
label #sign-two{
  font-size: 30px;
  color: #2E5090;
  float: right;
  line-height: 70px;
  margin-right: 30px;
  cursor: pointer;
  display: none;
}

#res-menu{
  display: none;
}

h1{
  font-family: 'Hind', sans-serif;
  color: #2E5090;
  margin-bottom: 1rem;
  font-size: 40px;
  font-weight: 400;
  margin-top: 0rem;
  padding-top: 8rem;
  max-width: 800px;
  line-height: 54px;
}

h1.lab{
  padding-top:13rem;
}

h2 {
  font-family:s 'Hind', sans-serif;
  font-size: 30px;
  color: #2E5090;
  line-height: 25px;
  font-weight: 400;
  margin-top: 4rem;
  margin-bottom: 1.5rem;
}


.title{
  font-family: 'Hind', sans-serif;
  color: #2E5090;
  line-height: 30px;
  font-weight: 400;
  font-size: 25px;
  margin-top: 10px;
  margin-bottom: 5px;
  padding-bottom: 5px;
  text-decoration:none;
  /* border-bottom: 1px solid #28282B; */
}

.labtitle{
  font-family: 'Hind', sans-serif;
  color: #2E5090;
  line-height: 30px;
  font-weight: 400;
  font-size: 25px;
  margin-top: 70px;
  margin-bottom: 20px;
  padding-bottom: 5px;
  text-decoration:none;
  border-bottom: 1px solid #2E5090;
}

p{
  font-family: 'Inconsolata', monospace;
  font-size: 18px;
  font-weight: 300;
  max-width: 700px;
  line-height: 30px;
  padding-bottom:  18px;
  margin-bottom: 18px;
  color:#2E5090;
}

p.des{
  margin-top: 1px;
  padding-top: 3px;
  margin-bottom: 30px;
}
p.view{
  margin-top: 0;
  margin-bottom: 1.3rem;
  color:#2E5090;
  font-size: 16px;
}
a.link{
  font-family: 'Hind', sans-serif;
  font-weight: 300;
  font-size: 18px;
  color:#2E5090;
  text-decoration: none;
  border-radius: 50px;
  border: 1px solid #2E5090;
  padding:10px 30px;
  background-color:#f3f2ed;
  margin: 5px;
}

a.link:hover{
  background-position-y:70%;
  color: #f3f2ed;
  background: #2E5090;
  /* cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>ðŸ‘€</text></svg>") 16 0,auto; !emojicursor.app */
}

a.underline{
  font-family: 'Inconsolata', monospace;
  color:#FF965E;
  text-decoration: none;
}

.img-hover-zoom {
  overflow: hidden;
}

.img-hover-zoom img {
  transition: transform .5s ease;
}


.img-hover-zoom:hover img {
  transform: scale(0.9);
}


.fit{
  width: 100%;
}

.visible-mobile{
  display:none !important;
}

.work{
  display: grid;
  grid-template:repeat(2,1fr)/repeat(2,1fr);
  justify-content: space-evenly;
  grid-gap: 0rem;
  grid-column-gap: 7rem;
  padding-left: 50px;
}
.other{
  display: grid;
  grid-template:repeat(1,4fr)/repeat(4,1fr);
  justify-content: space-evenly;
  grid-gap: 0.3rem;
}
.three-columns-grid{
  display: grid;
  grid-template-columns: repeat(3,1fr);
  grid-template-rows: repeat(1,3fr);
  grid-gap: 1rem;
}
.two-columns{
  display: flex;
  align-items: center;
}

.labgrid{
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(3, 1fr);
  grid-column-gap: 10px;
  grid-row-gap: 10px;
}

.homeheader{
  display: grid;
  /* grid-template-columns: 1fr 2fr; */
  grid-gap: 5rem;
  padding-bottom: 90px;
  padding-top: 100px;
  margin-left: 420px;
  font-size: 34px;
  line-height: 46px;
}
.intropic {
    height: 300px;
    width: 300px;
    position: absolute;
    top: 13%; /* Change this value to adjust the vertical position */
    left: 15%;
    border-radius: 50%;
    overflow: hidden;
}
.intropic img {
    height: 100%;
    width: 100%;
    border-radius: 50%;
    object-fit: cover;
    object-position: center;
    display: block;
}
.about{
  margin-left: 0rem;
}
p.short-about{
  width: 40rem;
  line-height: 2rem;
}

.sidebar{
  align-items: left;
  justify-content:left;
  margin-left:50px;
  position: relative;
  display: inline-block;
  background-color:#1CCCCC;
  z-index:10;
}

.sidebar ul{
  top: 200px;
  position:fixed;
  list-style: none;
  padding: 10px;

}
.sidebar ul li{
  margin: 5px 0;
}

.sidebar ul li a{
  text-decoration: none;
  color: #2E5090;
  font-family: 'Inconsolata', monospace;
  font-weight: 600;
  line-height: 25px;
  font-size: 15px;
}

.sidebar ul li a:hover{
  color:#FF965E;
}

iframe{
  width:1080px;
  height:600px;
}

hr {
  border: 1px solid #959595;
}

footer{
  margin: 50px;
  margin-bottom: 3rem;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.footer {
  font-size: 20px;
  font-family: 'Hind', sans-serif;
  font-weight: 300;

}

@media (min-width: 768px) and (max-width:1080px){
  main{
    max-width: 40em;
    min-width: 10em;
    margin: 0 auto;
  }

  .sidebar{
    display: none;
  }

  iframe{
    width:800px;
    height:500px;
  }

}

@media (min-width: 1080px) and (max-width:1468px){
  main{
    max-width: 60em;
    min-width: 10em;
    margin: 0 auto;
  }

  .sidebar{
    display: none;
  }

  iframe{
    width:1000px;
    height:550px;
  }
}

@media (min-width: 300px) and (max-width:812px){
  main{
    max-width: 22em;
    min-width: 18em;
    margin: 0 auto;
    height: 100%;
    padding-bottom: 60px;
  }

  body{
    margin:0;
    min-height:100%;
  }
  label #sign-one{
    display: block;
  }

  nav ul{
    position: fixed;
    width: 95%;
    top:30px;
    right: -80%;
    text-align: right;
    transition: .9s;
    z-index: 10;
  }

  nav ul li{
    display: block;
    margin: 10px 0px;
  }

  nav img{
    width:60px;
    top:5px;
    left:20px;
  }

  nav ul li a.link{
    font-size: 20px;
    font-weight: 400;
    margin:1px 0px;
  }

  #res-menu:checked ~ ul{
    left: 0;
  }

  #res-menu:checked ~ label #sign-one{
    display: none;
  }

  #res-menu:checked ~ label #sign-two{
    display: block;
  }

  h1, .homeheader{
    font-size: 2rem;
    margin-bottom: 1rem;
    font-weight: 400;
  }
  h1{
    margin-top: 0rem;
    font-size: 2.4rem;
    font-weight: 400;
  }
  h1.homeheader{
    margin-bottom: 0.5rem;
    margin-left: 10px;
    font-size: 26px;
    line-height: 33px;
    padding-top: 0rem;
}

    h1.lab{
      padding-top:80px;
    }

  h2{
    font-size: 1.5rem;
    line-height: 1.4rem;
    margin-top: 50px;
  }

  p{
    font-size: 17px;
    line-height: 28px;
  }

  p.short-about{
    max-width: 20rem;
  }

  .list{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .fit{
    width: 100%;
  }

  .new-paragraph a{
    display:block;
    font-size: 18px;
    line-height: 30px;
  }

  .work, .other{
    display: block;
  }

  .home-image{
    max-width: 22rem;
    margin: 2rem 1.5rem 0 1.5rem;
  }
  .home-image-vertical{
    max-width: 15rem;
    margin: 2rem 5rem 0 5rem;
  }

  .visible-mobile{
    display:inline !important;
  }

  .hidden-mobile{
    display:none !important;
  }

  .same-row{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  .img-show{
    display: grid;
    grid-template: repeat(2,1fr)/repeat(2,1fr);
    grid-gap: 0.5rem;
  }

  .intro1{
    display: grid;
    grid-template-columns: repeat(1,1fr);
    padding-bottom: 30px;
  }
  .two-columns, .footer{
    display: grid;
    grid-template-columns: repeat(1,2fr);
    grid-template-rows: repeat(1,1fr);
    grid-gap: 0px;
    margin-top: 0px;
    padding-top: 70px;
  }
  .three-columns-grid{
    display: grid;
    grid-template-columns: repeat(1,3fr);
    grid-template-rows: repeat(3,1fr);
    grid-gap: 0px;
  }
  .three-columns-grid h2{
    margin-top: 20px;
  }

  .sidebar{
    display: none;
  }

  iframe{
    width:300px;
    height:200px;
  }

}
.cursor {
    display: block;
    width: 30px;
    height: 30px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%);
    /* border-radius: 50%; */
    background: transparent;
    pointer-events: none;
    z-index: 111;
    border: 1px solid #2E5090;
    transition: all 0.2s ease-out;
    animation: moveCursor1 .2s infinite alternate;
}

.expand {
    background: transparent;
    animation: moveCursor2 .2s forwards;
    border: 1px solid #000;
}

@keyframes moveCursor1 {
    from {
        transform: scale(1);
    }

    to {
        transform: scale(.8);
    }
}

@keyframes moveCursor2 {
    0% {
        transform: scale(1);
    }

    50% {
        transform: scale(2);
    }

    100% {
        transform: scale(1);
        opacity: 0;
    }
}
.centered {
    position: absolute;
    top: 69%; /* Change this value to adjust the vertical position */
    left: 45%; /* Change this value to adjust the horizontal position */
    transform: translate(-50%, -50%);
}
.typer-container {
    /* font-weight: 700; */
    /* font-size: 150px !important; */
    color: #2E5090;
    /* margin: 100; */
    /* line-height: 2;  */
    position: absolute;
    top: 51%; /* Change this value to adjust the vertical position */
    left: 44.5%;
  }
  /* Sets styles and CSS animation values for typing animation*/
  .typer {
    width: 21em; 
    position: absolute;
    /* height: 520px; */
    opacity: 0;
    /* margin-top: 50px; */
    overflow:auto;
    -webkit-animation: type 24s steps(28);
    animation: type 8s steps(28);
  }
  .typer-container .typer {
    font-size: 36px !important;
    font-family: 'Inconsolata', monospace;
  }
  /* Sets delay for each animated word*/
  .typer:nth-child(2) { 
    -webkit-animation-delay: 3s; 
    animation-delay: 3s;
  }
  .typer:nth-child(3) { 
    -webkit-animation-delay: 6s; 
    animation-delay: 6s;
  }
  .typer:nth-child(4) { 
    -webkit-animation-delay: 9s;
      animation-delay: 9s; 
  }
  .typer:nth-child(5) { 
    -webkit-animation-delay: 12s; 
      animation-delay: 12s; 
  }
  .typer:nth-child(6) { 
    -webkit-animation-delay: 15s;
      animation-delay: 15s; 
  }
  /* Keyframes for animation */ 
  @keyframes type {
      0% {opacity: 0; width:0;}
      2% {opacity: 1;}
      14% {opacity: 1; width: 12ch;}
      26% {opacity: 1; width: 0;}
      27% {opacity: 0;}
  }
  @-webkit-keyframes type {
      0% {opacity: 0; width:0;}
      2% {opacity: 1;}
      14% {opacity: 1; width: 12ch;}
      26% {opacity: 1; width: 0;}
      27% {opacity: 0;}
  }
.blinking-cursor {
	position: relative;
	-webkit-animation: 1s blink step-end infinite;
	-moz-animation: 1s blink step-end infinite;
	-ms-animation: 1s blink step-end infinite;
	animation: 1s blink step-end infinite;
}
@keyframes "blink" {
	from, to {
    	color: transparent;
	}
	50% {color: #2E5090;}
}
@-moz-keyframes blink {
	from, to {
    	color: transparent;
	}
	50% {color: #2E5090;}
}
@-webkit-keyframes "blink" {
	from, to {
    	color: transparent;
	}
	50% {color: #2E5090;}
}
  .image-container {
    width: 100px; /* Adjust the size of the container as needed */
    height: 100px;
    /* overflow: hidden; */
    position: fixed;
    margin-left: -50px;
  }
  
  .i

